--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "ejs": "2.4.1",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "mongodb": "^2.2.16",
+    "mustache": "^2.3.0"
   },
   "repository": {
     "type": "git",
@@ -22,5 +25,10 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/heroku/node-js-getting-started/issues"
+  },
+  "homepage": "https://github.com/heroku/node-js-getting-started",
+  "author": ""
 }
