--- a/android/TKMS/app/build.gradle
+++ b/android/TKMS/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.appolica:interactive-info-window:v1.0.6'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
