--- a/android/TKMS/app/build.gradle
+++ b/android/TKMS/app/build.gradle
@@ -1,7 +1,15 @@
 apply plugin: 'com.android.application'
 
+allprojects {
+    repositories {
+        jcenter()
+        google()
+    }
+}
+
 android {
     compileSdkVersion 26
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "antvk.tkms"
         minSdkVersion 15
@@ -25,6 +33,7 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.appolica:interactive-info-window:v1.0.6'
