--- a/android/TKMS/app/build.gradle
+++ b/android/TKMS/app/build.gradle
@@ -32,8 +32,10 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:25.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:25.0.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.appolica:interactive-info-window:v1.0.6'
