--- a/android/TKMS/app/build.gradle
+++ b/android/TKMS/app/build.gradle
@@ -30,6 +30,8 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+apply plugin: 'com.android.application'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
@@ -42,6 +44,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.github.Todd-Davies:ProgressWheel:1.2'
+    implementation 'com.google.android.gms:play-services-places:15.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
