--- a/android/TKMS/app/src/main/AndroidManifest.xml
+++ b/android/TKMS/app/src/main/AndroidManifest.xml
@@ -34,11 +34,11 @@
         <activity
             android:name=".Activities.MapsActivity"
             android:label="@string/title_activity_maps">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
 
         <activity
@@ -55,6 +55,15 @@
                 android:value=".Activities.MarkerEventListActivity">
             </meta-data>
         </activity>
+
+        <activity android:name=".Activities.MapSelectorActivity">
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 
     </application>
 
