--- a/android/TKMS/app/src/main/AndroidManifest.xml
+++ b/android/TKMS/app/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".Activities.HistoryActivity">
+
+        </activity>
 
     </application>
 
