--- a/android/TKMS/app/src/main/AndroidManifest.xml
+++ b/android/TKMS/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
+
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/the_app_icon_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -59,13 +60,11 @@
         <activity android:name=".Activities.MapSelectorActivity">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
-
             <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity android:name=".Activities.HistoryActivity">
-
         </activity>
 
     </application>
