--- a/android/TKMS/app/build.gradle
+++ b/android/TKMS/app/build.gradle
@@ -32,6 +32,7 @@ android {
 
 repositories {
     maven { url "https://jitpack.io" }
+    mavenCentral()
 }
 
 apply plugin: 'com.android.application'
@@ -42,6 +43,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:25.0.0'
+    implementation 'com.facebook.android:facebook-share:[4,5)'
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.appolica:interactive-info-window:v1.0.6'
