--- a/android/TKMS/app/src/main/AndroidManifest.xml
+++ b/android/TKMS/app/src/main/AndroidManifest.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="antvk.tkms"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="antvk.tkms">
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="8" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -16,6 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
 
