--- a/android/TKMS/app/src/main/AndroidManifest.xml
+++ b/android/TKMS/app/src/main/AndroidManifest.xml
@@ -35,45 +35,49 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <!--<activity-->
-            <!--android:name="splashscreen.Splash"-->
-            <!--android:label="@string/app_name" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+        <activity
+            android:name=".splashscreen.Splash"
+            android:screenOrientation="portrait"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <!--<activity android:name="splashscreen.Main" />-->
 
         <activity
             android:name=".Activities.MapsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_maps">
 
         </activity>
 
         <activity
-            android:name=".Activities.MarkerEventListActivity">
+            android:name=".Activities.MarkerEventListActivity"
+            android:screenOrientation="portrait"
+            >
             <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".Activities.MapsActivity">
             </meta-data>
         </activity>
 
-        <activity android:name=".Activities.DescriptionActivity">
+        <activity android:name=".Activities.DescriptionActivity"
+            android:screenOrientation="portrait"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.MarkerEventListActivity">
             </meta-data>
         </activity>
 
-        <activity android:name=".Activities.MapSelectorActivity">
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".Activities.MapSelectorActivity"
+            android:screenOrientation="portrait"
+            >
 
-            <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
     </application>
