--- a/android/TKMS/app/src/main/AndroidManifest.xml
+++ b/android/TKMS/app/src/main/AndroidManifest.xml
@@ -90,5 +90,9 @@
 
         </activity>
 
+        <activity android:name=".Activities.EditMapActivity"
+            android:screenOrientation="portrait"
+            />
+
     </application>
 </manifest>
