--- a/android/TKMS/app/src/main/AndroidManifest.xml
+++ b/android/TKMS/app/src/main/AndroidManifest.xml
@@ -50,12 +50,13 @@
             android:name=".splashscreen.Splash"
             android:screenOrientation="portrait"
             >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+
+        <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
 
         <!--<activity android:name="splashscreen.Main" />-->
 
@@ -89,11 +90,24 @@
             android:screenOrientation="portrait"
             >
 
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
 
         <activity android:name=".Activities.EditMapActivity"
             android:screenOrientation="portrait"
             />
+
+        <activity android:name=".Activities.EditPlaceActivity"
+            android:screenOrientation="portrait"
+            >
+
+        </activity>
 
     </application>
 </manifest>
